--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       xmlns:fb="http://ogp.me/ns/fb#">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=2.0">
         <meta property="og:image" content="assets/images/fbcover.png" />
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/main.css">
