--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<meta property="og:url" content="http://gointersect.com">
 		<meta property="og:site_name" content="Intersect">
-		<meta property="og:title" content="Intersect. Real life. Real people.">
+		<meta property="og:title" content="Blue Whale App">
 		<meta property="og:description" content="Intersect iti arata persoane cu care te-ai intersectat in viata reala. Ai vazut pe cineva dragut dar n-ati vorbit? Da timpul inapoi cu Intersect! Ai inca o sansa - nu o rata!">
 		<meta property="og:image" content="http://gointersect.com/assets/images/fbcover.png">
 		<meta property="og:image:type" content="image/png">
@@ -22,15 +22,9 @@
     <body>
         <header></header>
         <div id="buttons">
-        	<a href="https://itunes.apple.com/ro/app/intersect-app/id1019474872?mt=8" class="allow-default" target="_blank">
-        		<img src="assets/images/appstore.png" srcset="assets/images/appstore.png 1x, assets/images/appstore@2x.png 2x, assets/images/appstore@3x.png 3x">
-        	</a>
-	        <a href="https://play.google.com/store/apps/details?id=com.intersect.app" class="allow-default" target="_blank">
+            <p size="25">Blue Whale App</p>
+	        <a href="https://play.google.com/store/apps/details?id=com.chatly.ly" class="allow-default" target="_blank">
 	        	<img src="assets/images/google_play.png" srcset="assets/images/google_play.png 1x, assets/images/google_play@2x.png 2x, assets/images/google_play@3x.png 3x">
-	        </a>
-	        <br><br><br><br><br><br><br><br>
-	        <a href="http://bit.ly/intersectpresskit" class="allow-default" target="_blank">
-	        	<img src="assets/images/presskit.png">
 	        </a>
         </div>
     </body>
