--- a/index.html
+++ b/index.html
@@ -1,37 +1,23 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:fb="http://ogp.me/ns/fb#">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <!-- <meta property="fb:app_id" content="439882519492251"> -->
-
-		<meta property="og:url" content="http://gointersect.com">
-		<meta property="og:site_name" content="Intersect">
-		<meta property="og:title" content="Intersect. Real life. Real people.">
-		<meta property="og:description" content="Intersect iti arata persoane cu care te-ai intersectat in viata reala. Ai vazut pe cineva dragut dar n-ati vorbit? Da timpul inapoi cu Intersect! Ai inca o sansa - nu o rata!">
-		<meta property="og:image" content="http://gointersect.com/assets/images/fbcover.png">
-		<meta property="og:image:type" content="image/png">
-		<meta property="og:image:width" content="1689">
-		<meta property="og:image:height" content="875">
-
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/main.css">
-    </head>
-    <body>
-        <header></header>
-        <div id="buttons">
-        	<a href="https://itunes.apple.com/ro/app/intersect-app/id1019474872?mt=8" class="allow-default" target="_blank">
-        		<img src="assets/images/appstore.png" srcset="assets/images/appstore.png 1x, assets/images/appstore@2x.png 2x, assets/images/appstore@3x.png 3x">
-        	</a>
-	        <a href="https://play.google.com/store/apps/details?id=com.intersect.app" class="allow-default" target="_blank">
-	        	<img src="assets/images/google_play.png" srcset="assets/images/google_play.png 1x, assets/images/google_play@2x.png 2x, assets/images/google_play@3x.png 3x">
-	        </a>
-	        <br><br><br><br><br><br><br><br>
-	        <a href="http://bit.ly/intersectpresskit" class="allow-default" target="_blank">
-	        	<img src="assets/images/presskit.png">
-	        </a>
-        </div>
-    </body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Intersect</title>
+    	<meta property="og:url" content="http://gointersect.com">
+	<meta property="og:site_name" content="Intersect">
+	<meta property="og:title" content="Intersect. Real life. Real people.">
+	<meta property="og:description" content="Intersect iti arata persoane cu care te-ai intersectat in viata reala. Ai vazut pe cineva dragut dar n-ati vorbit? Da timpul inapoi cu Intersect! Ai inca o sansa - nu o rata!">
+	<meta property="og:image" content="http://gointersect.com/assets/images/fbcover.png">
+	<meta property="og:image:type" content="image/png">
+	<meta property="og:image:width" content="1689">
+	<meta property="og:image:height" content="875">
+  </head>
+  <body>
+    <script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
+    <script>
+      var myLandbot = new LandbotFullpage({
+        index: 'https://landbot.io/u/H-181931-2E0NXOL8NWYZCZ5V/index.html',
+      });
+    </script>
+  </body>
 </html>
